MIGRATION/opt-istio-k8s-pvc/scanner-v4/02-scanner-v4-08-indexer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanner-v4-indexer
  namespace: stackrox
  labels:
    app.kubernetes.io/component: scanner-v4
    app.kubernetes.io/instance: stackrox-central-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-central-services
    app.kubernetes.io/version: 4.10.1
    helm.sh/chart: stackrox-central-services-400.10.1
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-central-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  selector:
    app: scanner-v4-indexer
  clusterIP: None
  ports:
  - name: grpc-scanner-v4-indexer
    port: 8443
    targetPort: grpc
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: scanner-v4-indexer-internal-no-istio-mtls
  namespace: stackrox
  labels:
    app.kubernetes.io/component: scanner-v4
    app.kubernetes.io/instance: stackrox-central-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-central-services
    app.kubernetes.io/version: 4.10.1
    helm.sh/chart: stackrox-central-services-400.10.1
  annotations:
    stackrox.io/description: "Disable Istio mTLS for port 8443, since StackRox services use built-in mTLS."
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-central-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  host: scanner-v4-indexer.stackrox.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 8443
      tls:
        mode: DISABLE
